      \item the function isofind gains an argument neglect_covPredCalib that allows for the computation of the covariance term that was so far neglected in IsoriX. See ?isofind for details.
      \item argument xlim for the plotting function for calibration fits
      \item argument line for customising how to plot the regression line in calibration fits
      \item the summary method for calibration fits now displays the residual variance
      }
  }
  \subsection{Updated}{
    \itemize{
      \item the precipitation raster being downloaed is now the version 2.1 provided by WorldClim (#136; special thanks to Kristen Mancuso for reporting this issue)
      }
  }
  \subsection{Minor change}{
    \itemize{
      \item plot.ISOFIND now detects sample of size 1 and no longer displays "Group" in the title of the assignment plot even if `who` = "group"
      \item all functions accepting a `data.frame` as input should also now be compatible when provided with a `tibble`
      \item correct typos (#130)
      \item default y-axis title changed to "Isotopic value in the environment" when plotting calibration fits
      }
  }
  \subsection{Geeky change}{
    \itemize{
      \item the version of spaMM required by IsoriX has changed to benefit from a new extractor we rely on for the computation of the 4th variance term during assignment
      \item the function depending on the package RandomFields are no longer available since that package has been (for now) retired by CRAN :-(
    }
  }
  \subsection{Solved BUGS}{
    \itemize{
      \item the printing method for the object of class ISOSCAPE was somehow not exported and thus not used
    }
  }
}

\section{version 0.8.2}{
  \subsection{New features}{
    \itemize{
      \item argument ylim for the plotting function for calibration fits
      \item it is now possible to calibrate data containing missing isotopic values
      \item it is now possible to assign data containing missing isotopic values
      }
  }