@@ -11,6 +11,7 @@ Authors@R: c(
 Depends:
     R (>= 3.5.0)
 Imports:
+    elevatr,
     graphics,
     grDevices,
     grid,
