@@ -17,6 +17,7 @@
     \itemize{
       \item the function calibfit gains an argument method that allows for selecting one of three calibration methods ("wild", "lab", or "desk"). This allows for users to use 1) calibration samples associated with unknown environmental isotopic values, 2) calibration samples associated with known environmental isotopic values, or 3) the intercept and slope of a calibration relationship computed by others (e.g. values found in a paper). Note: the third method allows for the consideration of a fractionaction factor too (i.e. slope = 0). See \code{calibfit} for details.
       \item the function isofind gains an argument neglect_covPredCalib that allows for the computation of the covariance term that was so far neglected in IsoriX. See ?isofind for details.
+      \item the function getelev has been completely rewriten so as to rely on the package elevatr to download elevation data. This prevents us from having to provide the data via our own servers and it displaces the burden of keeping data up to date to the mainteners of elevatr. You should check ?getelev for learning how to use the new version of the function but we retained the core principle of the previous function so that old workflow will only require minor adjustements. The new version still saves a *.tif file on the disk, albeit of different name to avoid (data) confusion.
       \item argument xlim for the plotting function for calibration fits
       \item argument line for customising how to plot the regression line in calibration fits
       \item the summary method for calibration fits now displays the residual variance
